--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pagevists",
   "version": "0.1.0",
+  "author": "Mehul Jadeja",
   "private": true,
   "homepage": "https://basicpph.netlify.app/",
   "scripts": {
@@ -8,9 +9,8 @@
     "start": "react-scripts start",
     "--------- BUILD ----------------------": "",
     "build": "react-scripts build && react-snap",
-    "--------- LINTING --------------------": "",
-    "format": "eslint --ext .jsx --ext .js --fix .",
-    "lint": "eslint --ext .js --ext .jsx ."
+    "--------- TEST -----------------------": "",
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -22,24 +22,22 @@
     "not op_mini all"
   ],
   "dependencies": {
-    "ds-react-input-file": "^0.8.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
+    "enzyme": "^3.11.0",
     "react": "^17.0.2",
     "react-app-polyfill": "^2.0.0",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-test-renderer": "^17.0.2",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
-    "eslint": "^7.22.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "prettier": "^2.2.1",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^13.0.16",
     "react-app-rewired": "^2.1.8",
-    "react-snap": "^1.23.0"
+    "react-snap": "^1.13.1"
   }
 }
